[package]
name = "prometheus_client_python_speedups"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "prometheus_client_python_speedups"
crate-type = ["cdylib", "lib"]

[dependencies]
compact_str = { version = "0.8.1", features = ["serde"] }
hashbrown = "0.15.2"
mimalloc = "0.1.43"
pyo3 = "0.23.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
